feat : dir 변경 store 추가, nav json 변경

--- a/assets/style/reset.scss
+++ b/assets/style/reset.scss
@@ -3,6 +3,10 @@
    License: none (public domain)
 */
 
+* {
+  font-family: "PrSB", AppleSDGothicNeo, "Apple SD Gothic Neo", "Apple SD 산돌고딕 Neo", sans-serif;
+}
+
 html,
 body,
 div,
